<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/greyAccent"
        android:padding="10dp">


        <TextView
            android:id="@+id/text_to_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/delete_text_dialog"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_to_delete"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button_dialog"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <Button
                android:id="@+id/delete_song_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/delete_button_dialog"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />


        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>