<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyAccent"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:id="@+id/header_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dialog_header"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/text_fields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/header_txt"
            android:orientation="vertical">


            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/dialog_song_name"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/song_name_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/dialog_song_author"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/song_author_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/dialog_song_link"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorAccent"
                app:boxStrokeWidth="1dp"
                app:errorEnabled="true"
                app:hintTextColor="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/song_link_dialog"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textCursorDrawable="@null"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/cover_iv_dialog"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/round_outline"
                android:backgroundTint="@color/colorAccent"
                android:orientation="horizontal"
                android:padding="7dp">

                <ImageButton
                    android:id="@+id/add_photo_dialog"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/add_a_photo_dialog"
                    android:tint="@color/colorPrimaryDark" />

                <ImageButton
                    android:id="@+id/add_photo_alternate_dialog"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="20dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitXY"
                    android:src="@drawable/add_photo_alternate_dialog"
                    android:tint="@color/colorPrimaryDark" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_fields"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/cancel_button_dialog"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />

            <Button
                android:id="@+id/add_btn_dialog"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorAccent"
                android:text="@string/dialog_add"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp" />


        </LinearLayout>

    </RelativeLayout>


</androidx.cardview.widget.CardView>